--- a/views/home.html
+++ b/views/home.html
@@ -6,5 +6,17 @@
 </head>
 <body>
   <h1>Hola Nodepop</h1>
+
+<h2>Productos</h2>
+
+<% products.forEach(function(product) { %>
+  <img src="<%= product.image %>" alt="<%= product.name %>" width="200">
+  <h3><%= product.name %></h3>
+  <p>Precio: <%= product.price %> €</p>
+  <p>Tags: <%= product.tags.join(', ') %></p>
+  <hr>
+<% }) %>
+
+
 </body>
 </html>
