--- a/views/header.html
+++ b/views/header.html
@@ -24,8 +24,10 @@
         <% if (!session.userId) { %>
           <a class="btn btn-success" href="/login">Login</a>
         <% } else { %>
+          <span class="me-3 text-secondary">Hola, <%= session.email %></span>
           <a class="btn btn-outline-success" href="/logout">Logout</a>
         <% } %>
+        
       </div>
     </div>
   </nav>
