--- a/views/home.html
+++ b/views/home.html
@@ -2,21 +2,28 @@
 
 <div class="container mt-4">
 
-
   <% if (!session.userId) { %>
     <div class="alert alert-warning">
       <p><a href="/login">Login</a> para acceder a tus productos.</p>
     </div>
+  <% } else { %>
+    <a class="btn btn-success mb-3" href="/products/new">+ Nuevo producto</a>
   <% } %>
 
   <h2>Productos</h2>
 
   <% products.forEach(function(product) { %>
     <div class="mb-4 border-bottom pb-3">
-      <img src="<%= product.image %>" alt="<%= product.name %>" width="200">
+      <img src="/images/<%= product.photo %>" alt="<%= product.name %>" width="200">
       <h3 class="mt-2"><%= product.name %></h3>
       <p>Precio: <%= product.price %> €</p>
       <p>Tags: <%= product.tags.join(', ') %></p>
+
+      <% if (session.userId) { %>
+        <form action="/products/<%= product._id %>/delete" method="POST" onsubmit="return confirm('¿Seguro que quieres eliminar este producto?')">
+          <button class="btn btn-danger btn-sm">Eliminar</button>
+        </form>
+      <% } %>
     </div>
   <% }) %>
 
